--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -11,33 +11,33 @@
 			href="./images/favicon-32x32.png" />
 
 		<title>Four card feature section</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
 		<div class="header">
-			<p class="one">Reliable, efficient delivery</p>
-			<p class="two">Powered by Technology</p>
-			<p class="three">
+			<p class="p-one">Reliable, efficient delivery</p>
+			<p class="p-two">Powered by Technology</p>
+			<p class="p-three">
 				Our Artificial Intelligence powered tools use millions of project data
 				points to ensure that your project is successful
 			</p>
 		</div>
-		<div class="supervisor">
+		<div class="box supervisor">
 			<p class="title">Supervisor</p>
 			<p class="text">Monitors activity to identify project roadblocks</p>
 		</div>
-		<div class="team">
+		<div class="box team">
 			<p class="title">Team Builder</p>
 			<p class="text">
 				Scans our talent network to create the optimal team for your project
 			</p>
 		</div>
-		<div class="karma">
+		<div class="box karma">
 			<p class="title">Karma</p>
 			<p class="text">Regularly evaluates our talent to ensure quality</p>
 		</div>
-		<div class="calculator">
+		<div class="box calculator">
 			<p class="title">Calculator</p>
 			<p class="text">
 				Uses data from past projects to provide better delivery estimates
