--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -5,29 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+    </style>
+    <link rel="stylesheet" href="./style.css" />
   <title>Four card feature section</title>
-
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+  <div class="BIGcontainer">
+    <div class="header">
+      <h1>Reliable, efficient delivery<br>
+      <b>Powered by Technology</b></h1>
+    </div>
+    <div class="smaller-text">
+       <p>Our Artificial Intelligence powered tools use millions of project <br>
+       data points to ensure that your project is successful</p>
+    </div>
+    <div class="Boxcontainer">
+      <div class="box">
+          <h3>Supervisor</h3>
+              <p> Monitors activity to identify project roadblocks</p>
+      <div class="box">
+          <h3>Team Builder</h3>
+              <p>Scans our talent network to create the optimal team for your project</p>
+      <div class="box">
+          <h3>Karma</h3>
+              <p> Regularly evaluates our talent to ensure quality</p>
+      <div class="box">
+          <h3>Calculator</h3>
+              <p>Uses data from past projects to provide better delivery estimates</p>
+    </div>
+  </div>
 </body>
 </html>
