--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link href="style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
 
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <title>Four card feature section</title>
+  </head>
+  <body>
+    <h2>Reliable, efficient delivery</h2>
+    <h1>Powered by Technology</h1>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <p class="description">
+      Our Artificial Intelligence powered tools use millions of project data
+      points to ensure that your project is successful
+    </p>
+    <div class="tabs">
+      <div class="cyan">
+        <div class="content">
+          <h3>Supervisor</h3>
+          <p>Monitors activity to identify project roadblocks</p>
+          <img src="images/icon-supervisor.svg" />
+        </div>
+      </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <div class="red">
+        <div class="content">
+          <h3>Team Builder</h3>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img src="images/icon-team-builder.svg" />
+        </div>
+      </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <div class="yellow">
+        <div class="content">
+          <h3>Karma</h3>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" />
+        </div>
+      </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-</body>
+      <div class="blue">
+        <div class="content">
+          <h3>Calculator</h3>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img src="images/icon-calculator.svg" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
